--- a/Fund.html
+++ b/Fund.html
@@ -13,7 +13,7 @@
 
 <!-- HEADER (same as other pages) -->
 <header class="header">
-    <div class="header-container">
+    <div class="header-container container">
         <div class="logo-wrap">
             <img src="assets/Logo.png" alt="Altellect" />
         </div>
@@ -23,7 +23,7 @@
               <a href="Projects.html">Projects</a>
               <a href="capital.html">Altellect Capital</a>
               <a href="carrers.html">Careers</a>
-              <a href="Apply-now.html">Join our team</a>
+         
               <a href="contact.html">Contact Us</a>
         </nav>
            <a class="join-btn" href="join.html">Join The Ecosystem</a>
@@ -102,7 +102,7 @@
             <h5>Company</h5>
             <a href="#">Home</a>
             <a href="#">About Us</a>
-            <a href="#">Join The Ecosystem</a>
+
             <div class="socials">
                 <a href="#">f</a>
                 <a href="#">in</a>
