--- a/capital.html
+++ b/capital.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Altellect Capital</title>
+	<title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Altellect Capital</title>
 	<link rel="icon" type="image/png" href="assets/Logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
 	<!-- HEADER (copied from index.html) -->
 	<header class="header">
-		<div class="header-container">
+		<div class="header-container container">
 			<div class="logo-wrap">
 				<img src="assets/Logo.png" alt="Altellect" />
 			</div>
@@ -25,7 +25,7 @@
 				<a href="Projects.html">Projects</a>
 				<a class="active" href="capital.html">Altellect Capital</a>
 				<a href="carrers.html">Careers</a>
-				<a href="Apply-now.html">Join our team</a>
+		
 				<a href="contact.html">Contact Us</a>
 			</nav>
 			<a class="join-btn" href="join.html">Join The Ecosystem</a>
@@ -34,7 +34,7 @@
 
 	<!-- HERO SECTION -->
 	<section class="capital-hero"
-		style="position:relative; background:url('assets/Altellect-Cap-Banner.png') center/cover no-repeat; min-height:420px; height:420px; display:flex; align-items:flex-end;">
+		style="position:relative; background:url('assets/Altellect-Cap-Banner.png') center/cover no-repeat; min-height:380px; height:60vh; display:flex; align-items:flex-end;">
 		<div class="about-hero-overlay"
 			style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
 		<div class="about-hero-content"
@@ -76,28 +76,28 @@
 					</div>
 					<div class="format-card" style="border-radius:8px; padding:24px;">
 						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
 							Convertible Notes &amp; SAFEs
 						</div>
 						<p style="color:#e6e6e6; font-size:0.98rem;">Flexible bridge with deferred valuation</p>
 					</div>
 					<div class="format-card" style="border-radius:8px; padding:24px;">
 						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
 							Syndicated Growth Rounds
 						</div>
 						<p style="color:#e6e6e6; font-size:0.98rem;">Lead or join rounds to accelerate scale</p>
 					</div>
 					<div class="format-card" style="border-radius:8px; padding:24px;">
 						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
 							Joint Ventures
 						</div>
 						<p style="color:#e6e6e6; font-size:0.98rem;">Co-create new businesses with shared upside</p>
 					</div>
 					<div class="format-card" style="border-radius:8px; padding:24px;">
 						<div style="display:flex; align-items:center; margin-bottom:10px;">
-							<img src="assets/Group 97.png" alt="Format Icon" style="width:32px; height:32px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:6px; background:#FDB913;" />
+							<img src="assets/Group 97.png" alt="Format Icon" style="width:50px; height:50px; margin-right:10px; display:flex; align-items:center; justify-content:center; border-radius:0px; background:#FDB913;" />
 							Internal Spinouts
 						</div>
 						<p style="color:#e6e6e6; font-size:0.98rem;">Incubate teams into independent ventures</p>
@@ -160,7 +160,7 @@
 				<h5>Company</h5>
 				<a href="#">Home</a>
 				<a href="#">About Us</a>
-				<a href="#">Join The Ecosystem</a>
+
 				<div class="socials">
 					<a href="#">f</a>
 					<a href="#">in</a>
