--- a/carrers.html
+++ b/carrers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Careers – Altellect</title>
+  <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Careers – Altellect</title>
   <link rel="icon" type="image/png" href="assets/Logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <!-- HEADER (copied from index.html) -->
 <header class="header">
-	<div class="header-container">
+	<div class="header-container container">
 		<div class="logo-wrap">
 			<img src="assets/Logo.png" alt="Altellect" />
 		</div>
@@ -24,37 +24,37 @@
 			<a href="#">Projects</a>
 			<a href="capital.html">Altellect Capital</a>
 			<a class="active" href="carrers.html">Careers</a>
-			<a href="#">Contact Us</a>
+			<a href="./contact.html">Contact Us</a>
 		</nav>
-		<button class="join-btn">Join The Ecosystem</button>
+    <a class="join-btn" href="join.html">Join The Ecosystem</a>
 	</div>
 </header>
 
 <!-- HERO/BANNER SECTION -->
-<section class="about-hero careers-hero" style="position:relative; background:url('assets/Careers-banner.png') center/cover no-repeat; min-height:340px; height:340px; display:flex; align-items:flex-end;">
+<section class="about-hero careers-hero" style="position:relative; background:url('assets/Careers-banner.png') center/cover no-repeat; min-height:420px; height:420px; display:flex; align-items:flex-end;">
   <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
   <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
     <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Diverse Talent. Unified By Purpose.</h1>
   </div>
 </section>
-
-<main class="careers-main" style="background:#f7f7f7; padding-bottom:0;">
+<main class="careers-main" style="background: #F2F2F2; padding-bottom:0;">
   <!-- Intro Section -->
-  <section class="careers-intro" style="max-width:1100px; margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0; position:relative; z-index:2;">
+  <section class="careers-intro container" style="margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0; position:relative; z-index:2;">
     <div style="flex:1 1 340px; min-width:320px; padding:40px 32px 32px 40px; display:flex; flex-direction:column; justify-content:center;">
       <div style="font-size:0.98rem; color:#222; font-weight:600; letter-spacing:0.5px; margin-bottom:10px;">CAREERS AT ALTELLECT</div>
-      <h2 style="font-size:2rem; font-family:'Montserrat',sans-serif; font-weight:700; margin:0 0 18px 0; line-height:1.2;">Come Build, Laugh, and Create With Us</h2>
-      <p style="font-size:1.08rem; color:#222; margin-bottom:18px;">Imagine a workplace where brainstorms feel like jam sessions, victories are marked with cake, and the office itself feels more like a playground for ideas than a cubicle farm. That’s Altellect — where ambition and imagination sit side by side.</p>
-      <p style="font-size:1.08rem; color:#222; margin-bottom:18px;">We’re a community of builders, dreamers, and doers who turn hard stakes into a collective win. At Altellect, we celebrate individuality, and we don’t believe in fitting in — we believe in belonging.</p>
+      <h2 style="font-size:2rem; font-family:'Roboto'; font-weight:700; margin:0 0 18px 0; line-height:1.2;">Come Build, Laugh, and Create With Us</h2>
+      <p style="font-size:1.08rem; color:#222; margin-bottom:18px;"> Imagine a workplace where brainstorms feel like jam sessions, victories are marked with cake, and the office itself feels more like a playground for ideas than a cubicle farm. That’s Altellect — where ambition and imagination sit side by side.<br/><br/> We’re a community of builders, dreamers, and doers who back each other up, share a laugh in between deadlines, and never miss a chance to celebrate a win (yes, cake included).</p>
+
       <div style="margin:18px 0 0 0;">
-        <div style="font-weight:600; margin-bottom:8px;">Here’s what life at Altellect is about:</div>
-        <ul style="font-size:1rem; color:#222; margin:0 0 0 18px; padding:0 0 0 18px;">
-          <li>Projects that make you proud (and leave one big asterisk).</li>
-          <li>Teamwork where colleagues could (and have) once been birthday rivals.</li>
-          <li>Learning that keeps evolving, not ending.</li>
-          <li>Flexibility to live your best work — your way.</li>
-          <li>Versatile celebration style — sometimes with cake, sometimes with arcade crowns.</li>
-        </ul>
+        <div style="font-weight:600;margin-bottom:8px;font-family: 'Roboto';"><b>Here’s what life at Altellect is about:</b></div>
+    <ul class="custom-arrow-list">
+  <li>Projects that make you proud…</li>
+  <li>Teammates who've got your back…</li>
+  <li>Learning that feels exciting…</li>
+  <li>Flexibility to do your best work…</li>
+  <li>Victories celebrated together…</li>
+</ul>
+
       </div>
     </div>
     <div style="flex:1 1 340px; min-width:320px; display:flex; align-items:center; justify-content:center; padding:32px 32px 32px 0;">
@@ -72,44 +72,170 @@
   </section>
 
   <!-- The Fun Stuff -->
-  <section style="background:#393939; color:#fff; margin:40px 0; padding:36px 0;">
-    <div class="container" style="max-width:1000px; margin:auto;">
-      <h3 style="font-size:1.4rem; font-family:Montserrat,Arial,sans-serif; font-weight:700; margin-bottom:24px; color:#FDB913;">The Fun Stuff</h3>
-      <div class="funstuff-grid" style="display:grid; grid-template-columns:repeat(3,1fr); gap:24px;">
-        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-          <img src="assets/fun-icon1.png" alt="Ignite Your Spark" style="height:48px; margin-bottom:10px;">
-          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Ignite Your Spark</h4>
-          <p style="color:#e6e6e6; font-size:0.98rem;">Explore new ideas, take risks, and grow with us.</p>
+  <section class="perks-benefits-section">
+    <div class="container">
+      <div class="perks-benefits-header">
+        <div class="perks-benefits-title-block">
+          <div class="perks-benefits-label">PERKS & BENEFITS</div>
+          <div class="perks-benefits-title">The <span>Fun Stuff</span></div>
+          <div class="perks-benefits-desc">At Altellect, we believe great work deserves great rewards. Here’s a glimpse of what comes with the journey :</div>
         </div>
-        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-          <img src="assets/fun-icon2.png" alt="Learning Never Ends" style="height:48px; margin-bottom:10px;">
-          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Learning Never Ends</h4>
-          <p style="color:#e6e6e6; font-size:0.98rem;">Access to resources, mentorship, and growth opportunities.</p>
-        </div>
-        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-          <img src="assets/fun-icon3.png" alt="Wellness That Works" style="height:48px; margin-bottom:10px;">
-          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Wellness That Works</h4>
-          <p style="color:#e6e6e6; font-size:0.98rem;">Flexible schedules, health benefits, and more.</p>
-        </div>
-        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-          <img src="assets/fun-icon4.png" alt="Experience Different Cultures" style="height:48px; margin-bottom:10px;">
-          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Experience Different Cultures</h4>
-          <p style="color:#e6e6e6; font-size:0.98rem;">Collaborate with a global team, celebrate diversity.</p>
-        </div>
-        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-          <img src="assets/fun-icon5.png" alt="Celebrate Wins" style="height:48px; margin-bottom:10px;">
-          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Celebrate Wins</h4>
-          <p style="color:#e6e6e6; font-size:0.98rem;">Recognize achievements, big and small, and enjoy the journey.</p>
-        </div>
-        <div class="fun-card" style="background:#323232; border-radius:8px; padding:24px; text-align:center;">
-          <img src="assets/fun-icon6.png" alt="Drive Real Impact" style="height:48px; margin-bottom:10px;">
-          <h4 style="color:#FDB913; font-size:1.1rem; font-weight:700; margin-bottom:6px;">Drive Real Impact</h4>
-          <p style="color:#e6e6e6; font-size:0.98rem;">Make a difference in the world, one project at a time.</p>
+        <div class="perks-grid">
+          <div class="perk-item">
+            <img src="./assets/Spaces.png" alt="Spaces that spark ideas">
+            <div class="perk-title">Spaces that spark ideas</div>
+            <div class="perk-desc">World-class infrastructure designed to inspire, not confine.</div>
+          </div>
+          <div class="perk-item">
+            <img src="./assets/Learning.png" alt="Learning that never stops">
+            <div class="perk-title">Learning that never stops</div>
+            <div class="perk-desc">Workshops, courses, and resources to fuel your growth.</div>
+          </div>
+          <div class="perk-item">
+            <img src="assets/wellness.svg" alt="Wellness that matters">
+            <div class="perk-title">Wellness that matters</div>
+            <div class="perk-desc">Support for mind, body, and soul, because health always comes first.</div>
+          </div>
+          <div class="perk-item">
+            <img src="assets/Exposure.png" alt="Exposure">
+            <div class="perk-title">Exposure</div>
+            <div class="perk-desc">Exposure to different products & ventures at different stages.</div>
+          </div>
+          <div class="perk-item">
+            <img src="assets/Celebratinos.png" alt="Celebrations big and small">
+            <div class="perk-title">Celebrations big and small</div>
+            <div class="perk-desc">Birthdays, milestones, and sometimes just because.</div>
+          </div>
+          <div class="perk-item">
+            <img src="assets/Direct-interaction.png" alt="Direct interaction">
+            <div class="perk-title">Direct interaction</div>
+            <div class="perk-desc">Direct interaction with founders and senior leadership.</div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 </main>
+
+  <!-- JOIN ALTELLECT SECTION (above CURRENT OPENINGS) -->
+    <section class="careers-join-section" style="background:#f7f7f7; padding:0; margin:0; border:0; width:100%;">
+      <div class="container" style="max-width:1100px; margin:0 auto; padding:0; text-align:center; border:0;">
+        <h3 style="text-align:center; font-family:'Montserrat',sans-serif; font-size:1.1rem; font-weight:600; letter-spacing:0.5px; color:#222; margin-bottom:10px; margin-top:0; padding-top:0;">JOIN ALTELLECT</h3>
+        <h2 style="text-align:center; font-family:'Montserrat',sans-serif; font-size:2rem; font-weight:700; color:#222; margin-bottom:16px; margin-top:0; padding-top:0;">More Than A Workplace</h2>
+        <div style="text-align:center; color:#222; font-size:1.08rem; max-width:700px; margin:0 auto 0 auto; font-family:'Roboto',sans-serif; padding-bottom:0;">Altellect is more than a workplace — it’s a launchpad, a community, and sometimes even a dance floor. If you’re ready to bring your ideas, your energy, and your whole self to work, we’re ready too.</div>
+      </div>
+    </section>
+
+
+
+    <!-- Table Box -->
+ <section class="careers-openings-section">
+  <div class="careers-container">
+    <h2 class="openings-title">CURRENT OPENINGS</h2>
+
+    <div class="career-filters">
+      <div>
+        <label>Location :</label>
+          <select>
+            <option>Mumbai</option>
+            <option>Bangalore</option>
+            <option>Delhi NCR</option>
+            <option>Pune</option>
+            <option>Remote</option>
+          </select>
+      </div>
+      <div>
+        <label>Functions :</label>
+        <select>
+          <option>Marketing</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="career-table-wrapper">
+      <table class="career-table">
+        <tbody>
+
+          <tr>
+            <td class="role-title">Product Manager</td>
+            <td class="role-desc">
+              Be the co-pilot to our captain. Drive strategy, make ideas real, and help scale Altellect’s vision into impact.
+            </td>
+            <td class="role-btn">
+              <a href="#" class="view-role-btn">VIEW ROLE</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="role-title">Product Designer</td>
+            <td class="role-desc">
+              Be the visionary behind our products. Shape ideas into experiences people love, guide innovation, and turn concepts into realities.
+            </td>
+            <td class="role-btn">
+              <a href="#" class="view-role-btn">VIEW ROLE</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="role-title">Platform Product Lead</td>
+            <td class="role-desc">
+              Take the driver’s seat for growth. Build strategies, unlock opportunities, and keep Altellect’s engines running with confidence.
+            </td>
+            <td class="role-btn">
+              <a href="#" class="view-role-btn">VIEW ROLE</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="role-title">Product Design Lead</td>
+            <td class="role-desc">
+              Be the storyteller-in-chief. Spark demand, craft campaigns that connect, and make sure the world knows Altellect’s story.
+            </td>
+            <td class="role-btn">
+              <a href="#" class="view-role-btn">VIEW ROLE</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="role-title">Product Content Lead</td>
+            <td class="role-desc">
+              Be our compass in uncharted waters. Protect the vision, ensure we play fair, and give the business confidence to grow.
+            </td>
+            <td class="role-btn">
+              <a href="#" class="view-role-btn">VIEW ROLE</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="role-title">Lead - Data & AI</td>
+            <td class="role-desc">
+              The culture champion. Balance people and processes, keep the workplace buzzing, and make every detail add up to a happy team.
+            </td>
+            <td class="role-btn">
+              <a href="#" class="view-role-btn">VIEW ROLE</a>
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
+    </div>
+
+    <p class="career-footer" style="text-align:center;">
+      Not seeing a role that fits? Write to us anyway at 
+      <a href="mailto:careers@altellect.com">careers@altellect.com</a>
+        — we love hearing<br>from people who want to grow with us.
+    </p>
+  </div>
+</section>
+
+
+
+<section class="cta-wrap">
+  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
+    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+  </div>
+</section>
 
 <!-- FOOTER (copied from index.html) -->
 <footer class="footer">
@@ -136,7 +262,7 @@
 			<h5>Company</h5>
 			<a href="#">Home</a>
 			<a href="#">About Us</a>
-			<a href="#">Join The Ecosystem</a>
+
 			<div class="socials">
 				<a href="#">f</a>
 				<a href="#">in</a>
