--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects – Altellect</title>
+  <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Projects – Altellect</title>
   <link rel="icon" type="image/png" href="assets/Logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="header-container">
+    <div class="header-container container">
       <div class="logo-wrap">
         <img src="assets/Logo.png" alt="Altellect" />
       </div>
@@ -22,7 +22,7 @@
           <a class="active" href="Projects.html">Projects</a>
           <a href="capital.html">Altellect Capital</a>
           <a href="carrers.html">Careers</a>
-          <a href="Apply-now.html">Join our team</a>
+     
           <a href="contact.html">Contact Us</a>
       </nav>
         <a class="join-btn" href="join.html">Join The Ecosystem</a>
@@ -33,7 +33,7 @@
     <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
       <h1 class="about-hero-title" style="color:#fff;font-size:1.7rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Across Sectors, Built With Intent.</h1>
     </div>
-  </section>
+ 
 
 </section>
   <section class="ventures-section">
@@ -143,7 +143,7 @@
         <h5>Company</h5>
         <a href="#">Home</a>
         <a href="#">About Us</a>
-        <a href="#">Join The Ecosystem</a>
+
         <div class="socials">
           <a href="#">f</a>
           <a href="#">in</a>
