--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- HEADER -->
 <header class="header">
-  <div class="header-container">
+  <div class="header-container container">
     <div class="logo-wrap">
       <img src="assets/Logo.png" alt="Altellect" />
  
@@ -31,12 +31,12 @@
       <a href="Projects.html">Projects</a>
       <a href="capital.html">Altellect Capital</a>
       <a href="carrers.html">Careers</a>
-      <a href="Apply-now.html">Join our team</a>
+     
       <a href="contact.html">Contact Us</a>
     </nav>
 
      <a class="join-btn" href="join.html">Join The Ecosystem</a>
-        <title>Altellect</title>
+        <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Altellect</title>
         <link rel="icon" type="image/png" href="assets/Logo.png" />
 </header>
 
@@ -257,7 +257,7 @@
       <h5>Company</h5>
       <a href="#">Home</a>
       <a href="#">About Us</a>
-      <a href="#">Join The Ecosystem</a>
+
 
       <div class="socials">
         <a href="#">f</a>
