--- a/join.html
+++ b/join.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><img src="assets/Logo.png" alt="Altellect" style="height:1em;vertical-align:middle;"> Join – Altellect</title>
+    <title>Join – Altellect</title>
     <link rel="icon" type="image/png" href="assets/Logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -84,30 +84,52 @@ document.addEventListener('DOMContentLoaded', function() {
 </style>
 <main class="join-main">
         <!-- HERO/BANNER SECTION -->
-        <section class="about-hero join-hero" style="position:relative; background:url('assets/join-hero.jpg') center/cover no-repeat; min-height:340px; height:340px; display:flex; align-items:flex-end;">
+        <section class="about-hero join-hero" style="position:relative; background:url('assets/Ecosystem-banner@2x.png') center/cover no-repeat; min-height:340px; height:340px; display:flex; align-items:flex-end;">
             <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
             <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
                 <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Founders, Capital and Leadership.</h1>
             </div>
         </section>
 
-        <!-- Two-column section -->
-        <section class="join-content-row" style="max-width:1000px; margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0;">
-            <div class="join-content-img" style="flex:1 1 340px; min-width:320px;">
-                <img src="assets/join-content.jpg" alt="Join Altellect" style="width:100%; max-width:420px; border-radius:0; box-shadow:0 2px 16px rgba(0,0,0,0.07);">
-            </div>
-            <div class="join-content-box" style="flex:1 1 340px; min-width:320px; padding:40px 32px 32px 40px; display:flex; flex-direction:column; justify-content:center;">
-                <h2 class="join-content-title" style="font-size:2rem; font-family:'Montserrat',sans-serif; font-weight:700; margin:0 0 18px 0; line-height:1.2;">Join the Engine<br>That Builds the Future</h2>
-                <ul class="join-content-list" style="font-size:1.08rem; color:#222; margin-bottom:18px;">
-                    <li><strong>Founder:</strong> Pitch a new venture or lead a new build</li>
-                    <li><strong>Operator:</strong> Join as Operator & Advisor</li>
-                    <li><strong>Technologist:</strong> Help power Operations & AI solutions</li>
-                    <li><strong>Investor:</strong> Access curated deal flow and scale-up opportunities</li>
-                    <li><strong>Expert:</strong> Contribute as a domain specialist or collaborator</li>
-                </ul>
-                <a href="Apply-now.html" class="join-btn-main" style="background:#666; color:#fff; font-family:'Roboto', 'Montserrat', Arial, sans-serif; font-size:18px; font-weight:700; padding:12px 32px; border:none; border-radius:0; box-shadow:none; letter-spacing:1px; text-align:center; margin-top:8px;">APPLY NOW</a>
-            </div>
-        </section>
+                <!-- Two-column section (XD Spec) -->
+                <section class="join-content-row" style="max-width:1000px; margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0;">
+                    <div class="join-content-img" style="flex:1 1 420px; min-width:320px; display:flex; align-items:center; justify-content:center;">
+                                            <img src="assets/Ecosystem-img.png" alt="Join Altellect" style="border-radius:0; box-shadow:0 2px 16px rgba(0,0,0,0.07);">
+                    </div>
+                    <div class="join-content-box" style="flex:1 1 420px; min-width:320px; padding:40px 32px 32px 40px; display:flex; flex-direction:column; justify-content:center;">
+                        <h2 class="join-content-title" style="font-size:2rem; font-family:'Montserrat',sans-serif; font-weight:700; margin:0 0 18px 0; line-height:1.2;">
+                            Join the Engine<br>That Builds the Future
+                        </h2>
+                        <div style="font-size:1.08rem; color:#222; margin-bottom:18px;">
+                            Altellect is always seeking:
+                        </div>
+                        <table style="width:100%; border-collapse:collapse; margin-bottom:18px;">
+                            <tr>
+                                <td style="font-weight:700; padding:8px 12px; border:1px solid #bbb;">Founder</td>
+                                <td style="padding:8px 12px; border:1px solid #bbb;">Pitch a new venture or lead an in-house build</td>
+                            </tr>
+                            <tr>
+                                <td style="font-weight:700; padding:8px 12px; border:1px solid #bbb;">Operator</td>
+                                <td style="padding:8px 12px; border:1px solid #bbb;">500+ Expert Operators & Advisors</td>
+                            </tr>
+                            <tr>
+                                <td style="font-weight:700; padding:8px 12px; border:1px solid #bbb;">Technologist</td>
+                                <td style="padding:8px 12px; border:1px solid #bbb;">500+ Expert Operators & Advisors</td>
+                            </tr>
+                            <tr>
+                                <td style="font-weight:700; padding:8px 12px; border:1px solid #bbb;">Investor</td>
+                                <td style="padding:8px 12px; border:1px solid #bbb;">Access curated deal flow and scale-stage opportunities</td>
+                            </tr>
+                            <tr>
+                                <td style="font-weight:700; padding:8px 12px; border:1px solid #bbb;">Expert / Vendor</td>
+                                <td style="padding:8px 12px; border:1px solid #bbb;">Contribute as a domain specialist or build partner</td>
+                            </tr>
+                        </table>
+                        <a href="Apply-now.html" class="join-btn-main" style="background:#666; color:#fff; font-family:'Roboto', 'Montserrat', Arial, sans-serif; font-size:16px; font-weight:700; padding:10px 0; width:160px; border:none; border-radius:0; box-shadow:none; letter-spacing:1px; text-align:center; margin-top:8px; display:block;">
+                            APPLY NOW
+                        </a>
+                    </div>
+                </section>
 
         <!-- CTA Section -->
         <section class="cta-wrap">
